--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@nuxtjs/axios": "^5.9.5",
         "@nuxtjs/dotenv": "^1.4.1",
+        "@nuxtjs/google-analytics": "^2.2.3",
         "@nuxtjs/proxy": "^1.3.3",
         "axios-jsonp": "^1.0.4",
         "bootstrap": "^4.1.3",
