--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,16 @@
 version: '3'
 
 services:
-  firebase:
-    build: .
-    container_name: 428lab-web
+  node:
+    build: ./docker/node
+    container_name: node
     ports:
-      - 4000:4000 # Emulator Suite UI
-      - 5000:5000 # Firebase Hosting
-      - 5001:5001 # Clound Functions
-      - 8080:8080 # Cloud Firestore
-      - 9005:9005
-      - 9099:9099 # auth emulator
-      - 9199:9199 # storage emulator
-#      - 8085:8085 # Cloud Pub/Sub
-#      - 9000:9000 # Realtime Database
+      - 5173:5173
     volumes:
-      - ./firebase/emulators/:/app:cached
-      - ./firebase/bin/:/root/.cache:cached
-      - ./firebase/config/:/root/.config:cached
-      - .:/app
-    working_dir: /app
+      - ./:/var/www/
     tty: true
-    stdin_open: true
+    # environment:
+    #   PORT: 3000
+    #   HOST: 0.0.0.0
     command: /bin/bash
-    platform: linux/x86_64
+    # command: sh -c "yarn install && yarn dev"
