--- a/package.json
+++ b/package.json
@@ -1,36 +1,43 @@
 {
-    "name": "428lab_website",
-    "version": "1.0.0",
-    "description": "My glorious Nuxt.js project",
-    "author": "T.Shinohara",
-    "private": true,
-    "scripts": {
-        "dev": "cross-env BASE_URL=http://localhost:3000 nuxt",
-        "build": "nuxt build && yarn build:copy",
-        "build:copy": "rimraf public && mkdirp public/_nuxt && cp -R functions/nuxt/dist/client/* public/_nuxt && cp -R src/static/* public",
-        "start": "nuxt start",
-        "generate": "nuxt generate",
-        "build:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt build",
-        "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt generate",
-        "heroku-postbuild": "npm run build",
-        "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
-        "serve": "cross-env BASE_URL=http://localhost:5000 yarn build && firebase serve --only hosting,functions"
-    },
-    "dependencies": {
-        "@nuxtjs/axios": "^5.9.5",
-        "@nuxtjs/dotenv": "^1.4.1",
-        "@nuxtjs/google-analytics": "^2.2.3",
-        "@nuxtjs/proxy": "^1.3.3",
-        "axios-jsonp": "^1.0.4",
-        "bootstrap": "^4.1.3",
-        "bootstrap-vue": "^2.0.0",
-        "connpass": "^1.1.0",
-        "cross-env": "^7.0.0",
-        "nuxt": "^2.0.0",
-        "xml2js": "^0.4.23"
-    },
-    "devDependencies": {
-        "mkdirp": "^1.0.3",
-        "rimraf": "^3.0.2"
-    }
+  "name": "428lab_website",
+  "version": "0.2.1",
+  "type": "module",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev --host 0.0.0.0",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "eslint ."
+  },
+  "devDependencies": {
+    "@fontsource/fira-mono": "^4.5.10",
+    "@neoconfetti/svelte": "^1.0.0",
+    "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-static": "^2.0.2",
+    "@sveltejs/kit": "^1.5.0",
+    "@types/cookie": "^0.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.28.0",
+    "eslint-plugin-svelte": "^2.26.0",
+    "sass": "^1.62.1",
+    "svelte": "^3.54.0",
+    "svelte-check": "^3.0.1",
+    "svelte-preprocess": "^5.0.3",
+    "tslib": "^2.4.1",
+    "typescript": "^5.0.0",
+    "vite": "^4.3.0"
+  },
+  "dependencies": {
+    "@types/xml2js": "^0.4.11",
+    "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
+    "fast-xml-parser": "^4.2.6",
+    "http-proxy-middleware": "^2.0.6",
+    "jsonp": "^0.2.1",
+    "node-fetch-jsonp": "^1.0.1"
+  }
 }
